--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <version>0.1</version>
     <name>gptdtgp</name>
     <groupId>com.pivotal.csoemea</groupId>
-    <packaging>jar</packaging>
+    <packaging>rpm</packaging>
     <organization>
         <name>Pivotal</name>
         <url>http://www.pivotal.io</url>
